# Shape_holes

./: CMakeLists.txt  CMakeLists_old.txt  README.md  hole-ball-viewer.py  main_flow.cpp  main_link.cpp  main_voronoi.cpp
2D Python/: poset.ipynb
data/: ball.off  ball.ply  delaunay.vtk  egg_low.off  poly.vtk  simple.off  three_triangles_3D.off  three_triangles_3D.ply  torus.off  torus.ply  uneven_torus.off  uneven_torus.ply  voronoi.vtk
data/example/: eight.exhaustive.tb  eight.tb
data/tmp/: delaunay3.nodes  delaunay3.simp
data/tmp/tmp/: full_PSC.vtk  subset10_PSC.vtk  subset11_PSC.vtk  subset12_PSC.vtk  subset13_PSC.vtk  subset14_PSC.vtk  subset15_PSC.vtk  subset16_PSC.vtk  subset17_PSC.vtk  subset18_PSC.vtk  subset19_PSC.vtk  subset1_PSC.vtk  subset20_PSC.vtk  subset21_PSC.vtk  subset22_PSC.vtk  subset23_PSC.vtk  subset24_PSC.vtk  subset25_PSC.vtk  subset26_PSC.vtk  subset27_PSC.vtk  subset28_PSC.vtk  subset29_PSC.vtk  subset2_PSC.vtk  subset30_PSC.vtk  subset31_PSC.vtk  subset32_PSC.vtk  subset33_PSC.vtk  subset34_PSC.vtk  subset35_PSC.vtk  subset36_PSC.vtk  subset37_PSC.vtk  subset38_PSC.vtk  subset39_PSC.vtk  subset3_PSC.vtk  subset40_PSC.vtk  subset41_PSC.vtk  subset42_PSC.vtk  subset43_PSC.vtk  subset44_PSC.vtk  subset45_PSC.vtk  (+23 more)
include/: cgal_typedef.h  delaunay_helper.h  filtration.h  filtration_medial.h  filtration_voronoi.h  flow_complex.h  input_parser.h  persistence.h  resampling.h  voronoi_3.h  voronoi_helper.h
